updated styling to hero, added button, navbar

--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,67 @@
 <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
+<header>
+	<nav class="navbar navbar-default">
+	  <div class="container-fluid">
+	    <!-- Brand and toggle get grouped for better mobile display -->
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+	        <span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <a class="navbar-brand" href="#">Local Buds</a>
+	    </div>
+
+	    <!-- Collect the nav links, forms, and other content for toggling -->
+	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	        <ul class="nav navbar-nav navbar-right">
+		        <li class="dropdown">
+	          		<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Strains <span class="caret"></span></a>
+			          <ul class="dropdown-menu">
+			            <li><a href="#">Action</a></li>
+			            <li><a href="#">Another action</a></li>
+			            <li><a href="#">Something else here</a></li>
+			            <li role="separator" class="divider"></li>
+			            <li><a href="#">Separated link</a></li>
+			            <li role="separator" class="divider"></li>
+			            <li><a href="#">One more separated link</a></li>
+			          </ul>
+	        	</li>
+	        <li><a href="#">Login</a></li>
+	        <li><a href="#">Sign-Up</a></li>
+
+	       
+	      </ul>
+
+
+	    </div><!-- /.navbar-collapse -->
+	  </div><!-- /.container-fluid -->
+	</nav>
+</header>
 	<div class="container-fluid" id="hero">
+		<div class="flexbox text-center">
+			<h1 class="hero-text">Grow with us!</h1>
+			<br\>
+			<div class="hero-info-container">
+				<span class="hero-info">Locally owned and supplied cannabis.</span> 
+				<br>
+				
+				<span class="hero-info">Check out some of the finest strains in PNW.</span>
+				<br>
 
-			<h1 class="text-center">Local Buds</h1>
-
+				<span class="hero-info">Affordable and enjoyable. </span>
+			</div>
+		</div>
+		<div class="text-center container-fluid">
+		<button class="btn btn-default">Find your strain</button>
+		</div>
 	</div>
+
+
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 </body>
+
 </html>
