minor styling updates

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
 			            <li><a href="#">One more separated link</a></li>
 			          </ul>
 	        	</li>
+	        <li><a href="#">Purchase</a></li>
 	        <li><a href="#">Login</a></li>
 	        <li><a href="#">Sign-Up</a></li>
 
