--- a/public/index.html
+++ b/public/index.html
@@ -68,8 +68,88 @@
 		</div>
 	</div>
 
+<div class="container-fluid weed-types">
+	<div class="col-md-4 text-center weed-div">
+		<a title="By Oren neu dag [CC BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0)], via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File%3ACannabis_leaf.svg"><img width="512" alt="Cannabis leaf" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/Cannabis_leaf.svg/512px-Cannabis_leaf.svg.png" class="weed"/></a>
+			<span class="weed-text text-center col-md-4">Sativa</span>
+
+	</div>	
+
+	<div class="col-md-4 text-center weed-div">
+		<a title="By Oren neu dag [CC BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0)], via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File%3ACannabis_leaf.svg"><img width="512" alt="Cannabis leaf" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/Cannabis_leaf.svg/512px-Cannabis_leaf.svg.png" class="weed"/></a>
+		<span class="weed-text text-center col-md-4">Indica</span>
+	</div>	
+
+	<div class="col-md-4 text-center weed-div">
+		<a title="By Oren neu dag [CC BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0)], via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File%3ACannabis_leaf.svg"><img width="512" alt="Cannabis leaf" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/Cannabis_leaf.svg/512px-Cannabis_leaf.svg.png" class="weed"/></a>
+		<span class="weed-text text-center col-md-4">Hybrid</span>
+	</div>	
+	<p class="text-center col-md-4 weed-paragraph"> 
+		<span class="weed4">
+		Tall and thin;
+		</span>
+		<br>
+		<span class="weed2">
+		Boosts creativity and is uplifting.
+		</span>
+		<br>
+		<span class="weed3">
+		Great for depression, ADD,
+		<br>
+		fatigue, etc.
+		</span>
+	</p>
+
+	<p class="text-center col-md-4 weed-paragraph"> 
+		<span class="weed4">
+		Short and bushy;
+		</span>
+		<br>
+		<span class="weed2">
+		Relaxing/mellow full body high.
+		</span>
+		<br>
+		<span class="weed3">
+		Great for anxiety, insomnia,
+		<br>
+		pain, etc.
+		</span>
+	</p>
+
+	<p class="text-center col-md-4 weed-paragraph"> 
+		<span class="weed4">
+		Pulls same characteristics
+		<br>
+		as other strains.
+		</span>
+
+		<br>
+
+		<span class="weed2">
+			Can be sativa/indica dominant.
+		</span>
+	</p>
+
+	
+</div>
+
+	
+<div class="container-fluid strain-gallery">
+
+
+
+</div>
+
+
+ 
 
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+<script src="http://itemslide.github.io/dist/itemslide.min.js"></script>
+
+<script type="text/javascript" href="js/script.js"></script>
+
+
 </body>
 
 </html>
