added scroll to top button

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
 <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
+
+<!-- BackToTop Button -->
+
+
 <header>
 	<nav class="navbar navbar-default">
 	  <div class="container-fluid">
@@ -140,14 +144,15 @@
 
 </div>
 
+<a href="javascript:void(0);" id="scroll" title="Scroll to Top" style="display: none;"><span></span></a>
 
- 
 
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
-<script src="http://itemslide.github.io/dist/itemslide.min.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
 
-<script type="text/javascript" href="js/script.js"></script>
+
+
 
 
 </body>
