fixed positions & responsiveness of descriptions of strains

--- a/public/index.html
+++ b/public/index.html
@@ -32,13 +32,10 @@
 		        <li class="dropdown">
 	          		<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Strains <span class="caret"></span></a>
 			          <ul class="dropdown-menu">
-			            <li><a href="#">Action</a></li>
-			            <li><a href="#">Another action</a></li>
-			            <li><a href="#">Something else here</a></li>
-			            <li role="separator" class="divider"></li>
-			            <li><a href="#">Separated link</a></li>
-			            <li role="separator" class="divider"></li>
-			            <li><a href="#">One more separated link</a></li>
+			            <li><a href="#">Sativa</a></li>
+			            <li><a href="#">Indica</a></li>
+			            <li><a href="#">Hybrid</a></li>
+			            
 			          </ul>
 	        	</li>
 	        <li><a href="#">Purchase</a></li>
@@ -73,68 +70,74 @@
 	</div>
 
 <div class="container-fluid weed-types">
-	<div class="col-md-4 text-center weed-div">
-		<a title="By Oren neu dag [CC BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0)], via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File%3ACannabis_leaf.svg"><img width="512" alt="Cannabis leaf" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/Cannabis_leaf.svg/512px-Cannabis_leaf.svg.png" class="weed"/></a>
-			<span class="weed-text text-center col-md-4">Sativa</span>
 
+
+	<div>
+		<div class="col-md-4 text-center weed-div">
+			<a title="By Oren neu dag [CC BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0)], via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File%3ACannabis_leaf.svg"><img width="512" alt="Cannabis leaf" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/Cannabis_leaf.svg/512px-Cannabis_leaf.svg.png" class="weed"/></a>
+			<span class="weed-text text-center">Hybrid</span>
+
+			<p class="text-center weed-paragraph"> 
+			<span class="weed4">
+			Pulls same characteristics
+			<br>
+			as other strains.
+			</span>
+
+			<br>
+
+			<span class="weed2">
+				Can be sativa/indica dominant.
+			</span>
+		</p>
+			
+		</div>	
+	</div>
+
+	<div>
+		<div class="col-md-4 text-center weed-div">
+			<a title="By Oren neu dag [CC BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0)], via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File%3ACannabis_leaf.svg"><img width="512" alt="Cannabis leaf" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/Cannabis_leaf.svg/512px-Cannabis_leaf.svg.png" class="weed"/></a>
+			<span class="weed-text text-center">Hybrid</span>
+
+			<p class="text-center weed-paragraph"> 
+			<span class="weed4">
+			Pulls same characteristics
+			<br>
+			as other strains.
+			</span>
+
+			<br>
+
+			<span class="weed2">
+				Can be sativa/indica dominant.
+			</span>
+		</p>
+			
+		</div>	
 	</div>	
 
-	<div class="col-md-4 text-center weed-div">
-		<a title="By Oren neu dag [CC BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0)], via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File%3ACannabis_leaf.svg"><img width="512" alt="Cannabis leaf" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/Cannabis_leaf.svg/512px-Cannabis_leaf.svg.png" class="weed"/></a>
-		<span class="weed-text text-center col-md-4">Indica</span>
+	<div class="weed-div">
+		<div class="col-md-4 text-center weed-div">
+			<a title="By Oren neu dag [CC BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0)], via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File%3ACannabis_leaf.svg"><img width="512" alt="Cannabis leaf" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/Cannabis_leaf.svg/512px-Cannabis_leaf.svg.png" class="weed"/></a>
+			<span class="weed-text text-center">Hybrid</span>
+
+			<p class="text-center weed-paragraph"> 
+			<span class="weed4">
+			Pulls same characteristics
+			<br>
+			as other strains.
+			</span>
+
+			<br>
+
+			<span class="weed2">
+				Can be sativa/indica dominant.
+			</span>
+		</p>
+			
+		</div>	
 	</div>	
 
-	<div class="col-md-4 text-center weed-div">
-		<a title="By Oren neu dag [CC BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0)], via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File%3ACannabis_leaf.svg"><img width="512" alt="Cannabis leaf" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/Cannabis_leaf.svg/512px-Cannabis_leaf.svg.png" class="weed"/></a>
-		<span class="weed-text text-center col-md-4">Hybrid</span>
-	</div>	
-	<p class="text-center col-md-4 weed-paragraph"> 
-		<span class="weed4">
-		Tall and thin;
-		</span>
-		<br>
-		<span class="weed2">
-		Boosts creativity and is uplifting.
-		</span>
-		<br>
-		<span class="weed3">
-		Great for depression, ADD,
-		<br>
-		fatigue, etc.
-		</span>
-	</p>
-
-	<p class="text-center col-md-4 weed-paragraph"> 
-		<span class="weed4">
-		Short and bushy;
-		</span>
-		<br>
-		<span class="weed2">
-		Relaxing/mellow full body high.
-		</span>
-		<br>
-		<span class="weed3">
-		Great for anxiety, insomnia,
-		<br>
-		pain, etc.
-		</span>
-	</p>
-
-	<p class="text-center col-md-4 weed-paragraph"> 
-		<span class="weed4">
-		Pulls same characteristics
-		<br>
-		as other strains.
-		</span>
-
-		<br>
-
-		<span class="weed2">
-			Can be sativa/indica dominant.
-		</span>
-	</p>
-
-	
 </div>
 
 	
@@ -148,6 +151,8 @@
 
 
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 <script type="text/javascript" src="js/script.js"></script>
 
